unpackaged/main/default/objects/Case_User_Pool__c/Case_User_Pool__c.object-meta.xml
<CustomObject>
    <label>Case User Pool</label>
    <nameField>
        <displayFormat>CASE-USPO {0000}</displayFormat>
        <label>Case User Pool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case User Pool</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>