unpackaged/main/default/objects/Case_User_Pool__c/fields/Automate__c.field-meta.xml
<CustomField>
    <fullName>Automate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Automate</label>
    <type>Checkbox</type>
</CustomField>