unpackaged/main/default/objects/Case_User_Pool__c/fields/Number_Cases_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_Cases_Open__c</fullName>
    <label>Number of Cases Open</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>