unpackaged/main/default/objects/Case_User_Pool__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Owner</fullName>
            </value>
            <value>
                <fullName>Tax Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>