unpackaged/main/default/objects/Case_User_Pool__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_User_Pool</relationshipName>
    <type>Lookup</type>
</CustomField>