unpackaged/main/default/objects/Case_User_Pool__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Owner_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Number_Cases_Open__c</columns>
    <columns>Automate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>